@@ -25,9 +25,6 @@
 
 #include <glib.h>
 #include <glibmm.h>
-#if 0
-#include <libgnomevfsmm.h>
-#endif
 #include <cstring>
 
 
@@ -37,85 +34,6 @@ namespace
 using Regexxer::FileBuffer;
 
 enum { BUFSIZE = 4096 };
-
-#if 0
-Glib::RefPtr<FileBuffer> load_try_encoding(const std::string& filename, const std::string& encoding)
-{
-  //open the input file for read access:
-  Gnome::Vfs::Handle read_handle;
-
-  try
-  {
-    read_handle.open(filename, Gnome::Vfs::OPEN_READ);
-  }
-  catch (const Gnome::Vfs::exception& ex)
-  {
-    //TODO: Give the user some meaningful information?
-    return Glib::RefPtr<FileBuffer>();
-  }
-
-  // The whole thing:
-  //Use std::string because it might not be UTF8,
-  //and because Gnome::Vfs::Handle::read() reads bytes, not necessarily whole characters.
-  std::string text;
-    
-  try
-  {
-    // read data from the input URI:
-
-    // Buffer for each chunk:
-    const Util::ScopedArray<char> inbuf (new char[BUFSIZE]);
-    
-    bool bContinue = true;
-    while (bContinue)
-    {
-      Gnome::Vfs::FileSize bytes_read = read_handle.read(inbuf.get(), BUFSIZE);
-    
-      if (bytes_read == 0)
-        bContinue = false; //stop because we reached the end.
-      else
-      {
-        //Check that it's not a binary file:
-        if (std::memchr(inbuf.get(), '\0', bytes_read))
-          return Glib::RefPtr<FileBuffer>();
-
-        //Add the text to the string:
-        text += std::string(inbuf.get(), bytes_read);
-      }
-    }
-  }
-  catch (const Gnome::Vfs::exception& ex)
-  {
-    std::cerr << "Gnome::Vfs::Handle::read() failed: " << ex.what() << std::endl;
-    //TODO: Give the user some meaningful information?
-    return Glib::RefPtr<FileBuffer>();
-  }
-
-  
-  try
-  {
-    Glib::RefPtr<FileBuffer> text_buffer = FileBuffer::create();
-   
-    //Try to convert it to UTF8, guessing the encoding:
-    //(most of the time, it will already be UTF8
-    //TODO_performance: This copying of huge strings is probably very slow:
-    //encoding is a parameter to this method.
-    //if it fails then this method will be called with a different encoding,
-    //until the calling method finally gives up.
-    std::string text_utf8 = Glib::convert_with_fallback(text, "UTF-8", encoding);
-
-    //Add the string to a TextBuffer:
-    text_buffer->insert(text_buffer->end(), text_utf8);
-
-    return text_buffer;
-  }
-  catch (const Glib::ConvertError& ex)
-  {
-    //The conversion failed - we probably guessed the encoding wrongly.
-    return Glib::RefPtr<FileBuffer>();
-  }
-}
-#else
 
 Glib::RefPtr<FileBuffer> load_iochannel(const Glib::RefPtr<Glib::IOChannel>& input)
 {
@@ -172,8 +90,6 @@ Glib::RefPtr<FileBuffer> load_try_encoding(const std::string& filename, const st
 
   return Glib::RefPtr<FileBuffer>();
 }
-
-#endif
 
 } // anonymous namespace
 
@@ -241,41 +157,6 @@ void load_file(const FileInfoPtr& fileinfo, const std::string& fallback_encoding
   }
 }
 
-#if 0
-void save_file(const FileInfoPtr& fileinfo)
-{
-  //open the input file for write access:
-  Gnome::Vfs::Handle write_handle;
-
-  try
-  {
-    write_handle.open(fileinfo->fullname, Gnome::Vfs::OPEN_WRITE);
-  }
-  catch (const Gnome::Vfs::exception& ex)
-  {
-    std::cerr << "Gnome::Vfs::Handle::open() failed: " << ex.what() << std::endl;
-    //TODO: Give the user some meaningful information?
-    return;
-  }
-
-  try
-  {
-    // Write the data:
-    //TODO_performance: It might be faster if we don't use the temporary copy:
-    const Glib::ustring chunk = fileinfo->buffer->get_text();
-    /* GnomeVFSFileSize bytes_written = */
-    write_handle.write(chunk.c_str(), chunk.bytes());
-  }
-  catch (const Gnome::Vfs::exception& ex)
-  {
-    std::cerr << "Gnome::Vfs::Handle::write() failed: " << ex.what() << std::endl;
-    //TODO: Give the user some meaningful information?
-    return;
-  }
-  
-  fileinfo->buffer->set_modified(false);
-}
-#else
 void save_file(const FileInfoPtr& fileinfo)
 {
   const Glib::RefPtr<Glib::IOChannel> channel =
@@ -290,7 +171,6 @@ void save_file(const FileInfoPtr& fileinfo)
 
   fileinfo->buffer->set_modified(false);
 }
-#endif
 
 } // namespace Regexxer
 
